# anzuowanju

./: .gitignore  123456.jks  build.gradle  gradle.properties  readme.md  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/name/zzzzzzzzzzz/anzuowanju/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: adblock-u.zs  base.zs  cang-edit.zsa  cang-kw.zs  cang-new.zs  def.zs  def2.zs  dl-notif.zs  down2.zsa  downbrow.zsa  edit.zsa  exec.zsa  fengmian.zs  hello.zsa  helloa.zsa  hellolight.zsa  hiafter5s.zsa  http8086.zsa  index.2.zs  index.3.zs  index.4.zs  index.html  index.zs  index.zsa  index1.zs  index2.html  index2.zs  info.zsa  inpurl.zs  it-url.zs  js.zs  loc-cang.zsa  longclick.zs  ls-app.zsa  memory.zsa  menu17  mi插座.zsa  patch24-1.zs  redir.zs  replace.zs  (+19 more)
app/src/main/cpp/: CMakeLists.txt  miio  miio.cpp  native-lib.cpp  s.h  zhscript2  zhscript2.cpp
app/src/main/java/com/hello/hellolight/: hellolight___.java
app/src/main/java/name/zzzzzzzzzzz/anzuowanju/: Edit_.java  Main_.java  Miio_.java
app/src/main/java/name/zzzzzzzzzzz/anzuowanju/clas/: All_.java  AppWidget_text_.java  AutoStart_.java  Cang_.java  DeviceAdmin_.kt  Menu2_.java  Menu_.java  Resource_.java  Service_.java
app/src/main/java/org/zhscript/: Exception2_.java  Exception_.java  Result_.java  Shell_.java
app/src/main/java/org/zhscript/clas/: ActivityResult_.java  Broadcast_.java  BuLiao_.kt  Buzhichi_.kt  Calendar_.kt  Client_.java  DateTime_.java  Dir_.java  Dlg_.java  Download2_.kt  Download_.java  Exec_.java  FileOp_.java  FileProvider_.java  I_.java  Input_.java  Js_.java  Locat_.java  LongClick_.java  Msgbox_.java  Notif_.java  Opt_.java  Package_.java  Permi_.kt  Query_.java  Regex_.java  Server_.java  Shortcut_.java  Sms_.java  Start_.java  Switch_.java  TTS_.java  Tag_.java  Test2_.kt  Test_.java  Timer_.java  Upload_.java  UrlBig_.java  Url_.java  Util_.java  (+5 more)
app/src/main/res/drawable/: ic_launcher_background.xml  loading_bg.xml
app/src/main/res/layout/: activity_edit.xml  app_bar_main.xml  app_widget_.xml  content_main.xml  hellolight_main.xml  nav_header_main.xml
app/src/main/res/menu/: activity_main2_drawer.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: app_widget__info.xml  file_paths.xml
app/src/test/java/name/zzzzzzzzzzz/anzuowanju/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
